--- a/static/scss/pages/_services.scss
+++ b/static/scss/pages/_services.scss
@@ -3,29 +3,32 @@
 // ---------------------------------------------------------------
 
 .services-hero{
+    @media #{$breakpoint-sm}{
+        height: 62em;
+    }
     @media #{$breakpoint-md}{
         display: grid;
-        grid-template-columns: 5em 1fr 2em 1fr 5em;
+        grid-template-columns: auto 21em 1em 21em auto;
         height: 22em;
         margin: 3em 0 0 0;
     }
     @media #{$breakpoint-lg}{
         display: grid;
-        grid-template-columns: 6em 1fr 2em 1fr 6em;
+        grid-template-columns: auto 22em 1em 17em auto;
         height: 22em;
         margin: 3em 0 0 0;
     }
     @media #{$breakpoint-xl}{
         display: grid;
-        grid-template-columns:  auto 17em 2em 17em auto;
+        grid-template-columns:  auto 21em 2em 17em auto;
         height: 20em;
-        margin: 2em 0 0 0;
+        margin: 2em 0 2em 0;
     }
     @media #{$breakpoint-xxl}{
         display: grid;
-        grid-template-columns: auto 16em 1em 16em auto;
+        grid-template-columns: auto 20em 2em 16em auto;
         height: 20em;
-        margin: 3em 0 0 0;
+        margin: 2em 0 0 0;
     }
 }
 
@@ -39,7 +42,7 @@
     }
     @media #{$breakpoint-md}{
         grid-column: 4;
-        height: 90%;
+        height: 100%;
         position: relative;
     }
     @media #{$breakpoint-lg}{
@@ -49,12 +52,12 @@
     }
     @media #{$breakpoint-xl}{
         grid-column: 4;
-        height: 90%;
+        height: 100%;
         position: relative;
     }
     @media #{$breakpoint-xxl}{
         grid-column: 4;
-        height: 85%;
+        height: 100%;
         position: relative;
     }
 
@@ -84,7 +87,7 @@
         right: 0;
         top: 0;
         bottom: 0;
-        height: 12em;
+        height: 13em;
         margin: auto;
     }
     @media #{$breakpoint-xl}{
@@ -102,19 +105,44 @@
         right: 0;
         top: 0;
         bottom: 0;
-        height: 9em;
+        height: 13em;
         margin: auto;
     }
 
     .about-title{
+        @media #{$breakpoint-md}{
+            font-size: 1.7em;
+            letter-spacing: .2em;
+            margin: 0;
+        }
+        @media #{$breakpoint-lg}{
+            font-size: 1.6em;
+            letter-spacing: .2em;
+            margin: 0;
+        }
         @media #{$breakpoint-xl}{
             font-size: 1.4em;
+            letter-spacing: .2em;
+            margin: 0;
+        }
+        @media #{$breakpoint-xxl}{
+            font-size: 1.35em;
             letter-spacing: .2em;
             margin: 0;
         }
     }
     
     .sect-title{
+        margin: 1.5em 0;
+        @media #{$breakpoint-sm}{
+            margin: .6em 0 1em 0;
+        }
+        @media #{$breakpoint-md}{
+            margin: .6em 0 .8em 0;
+        }
+        @media #{$breakpoint-lg}{
+            margin: .5em 0;
+        }
         @media #{$breakpoint-xl}{
             margin: .5em 0 .9em;
         }
@@ -160,12 +188,15 @@
 }
 
 .services-hero-img{
+    @media #{$breakpoint-sm}{
+        height: 33em;
+    }
     @media #{$breakpoint-min-md}{
         grid-column: 2;
     }
     img{
         width: 100%;
-        height: 90%;
+        height: 100%;
         @media #{$breakpoint-xxl}{
             height: 85%;
         }
@@ -228,12 +259,18 @@
 }
 
 .services-logo-title{
+    line-height: .7;
+    @media #{$breakpoint-sm}{
+        line-height: .7;
+    }
     @media #{$breakpoint-md}{
         font-size: 3em;
         line-height: .8;
         margin: 0 ;
     }
-
+    @media #{$breakpoint-lg}{
+        line-height: .6;
+    }
     @media #{$breakpoint-xl}{
         line-height: .6;
     }
@@ -247,6 +284,14 @@
     text-align: center;
     display: grid;
     justify-items: center;
+    padding: 1em 0;
+    @media #{$breakpoint-sm}{
+        padding: 1em 0;
+
+    }
+    @media #{$breakpoint-lg}{
+        margin: 2em 0;
+    }
     @media #{$breakpoint-min-md}{
         background-color: white;
     }
@@ -258,6 +303,10 @@
 .intro-title{
     margin-top: 2em;
     font-family: $font-biko;
+    width: 15.5em;
+    @media #{$breakpoint-sm}{
+        width: 23em;
+    }
     @media #{$breakpoint-md}{
         font-size: 1.2em;
         width: 34em;
@@ -265,7 +314,7 @@
     }
     @media #{$breakpoint-lg}{
         font-size: 1.1em;
-        width: 27em;
+        width: 34em;
         // margin-top: 0;
     }
     @media #{$breakpoint-xl}{
@@ -274,8 +323,8 @@
         // margin-top: 0;
     }
     @media #{$breakpoint-xxl}{
-        font-size: 1.05em;
-        width: 27em;
+        font-size: .9em;
+        width: 36em;
         // margin-top: 0;
     }
 }
@@ -284,9 +333,9 @@
     font-size: 1.5em;
     font-family: $font-biko;
     color: $pink;
-    margin: 1em 1em 1.5em 1em;
+    margin: 1em 0 1.5em 0;
     @media #{$breakpoint-sm}{
-        font-size: 1.2em;
+        font-size: 1.4em;
     }
     @media #{$breakpoint-md}{
         font-size: 1.1em;
@@ -308,7 +357,6 @@
 
 .intro-text{
     width: 23em;
-    margin-bottom: 4em;
     @media #{$breakpoint-sm}{
         width: 25em;
     }
@@ -336,13 +384,13 @@
     text-align: center;
     margin: 4em 0;
     @media #{$breakpoint-min-md}{
-        margin: 0 0 4em 0;
+        margin: 2em 0 2em 0;;
     }
     @media #{$breakpoint-xl}{
         margin: 0 0 2em 0;
     }
     @media #{$breakpoint-xxl}{
-        margin: 0 0 2em 0;
+        margin: 2em 0 2em 0;
     }
 }
 
@@ -370,7 +418,7 @@
             grid-row: 2;
         }
     }
-    @media #{$breakpoint-xl}{
+    @media #{$breakpoint-lg}, #{$breakpoint-xl}{
         margin: 0;
         &:nth-child(1){
             grid-column: 2;
@@ -388,7 +436,9 @@
 }
 
 .who-title{
-    margin-bottom: 2em;
+    @media #{$breakpoint-md}{
+        margin-bottom: 1em;
+    } 
 }
 
 .who-for-sub{
@@ -415,13 +465,13 @@
     @media #{$breakpoint-md}{
         display: grid;
             // grid-template-columns: auto 11em 1em 11em 1em 11em 1em 11em auto;
-            grid-template-columns: auto 14em 3em 14em 3em auto;
+            grid-template-columns: auto 14em 2em 14em auto;
             grid-template-rows: auto auto;
 
     }   
     @media #{$breakpoint-lg}{
         display: grid;
-        grid-template-columns: auto 11em 2em 11em 2em 11em auto;
+        grid-template-columns: auto 11em 1em 11em 1em 11em 1em 11em auto;
     } 
     @media #{$breakpoint-xl}{
         display: grid;
@@ -430,7 +480,7 @@
     } 
     @media #{$breakpoint-xxl}{
         display: grid;
-        grid-template-columns: auto 9em 2em 9em 2em 9em auto;
+        grid-template-columns: auto 9em 2em 9em 2em 9em 2em 9em auto;
     } 
 }
 
@@ -445,11 +495,12 @@
 .how-item{
     background-color: $lightest-pink;
     margin: 4em 1.5em;
-    height: 33.5em;
+    height: 35.5em;
     padding: 2em 2em;
     @media #{$breakpoint-sm}{
-        height: 26em;
-        margin: 4em 2.5em;
+        height: 27em;
+        margin: 4em auto;
+        width: 70%;
     }
     @media #{$breakpoint-min-md}{
         background-color: $gray;
@@ -470,13 +521,13 @@
         width: 100%;
     }
     @media #{$breakpoint-lg}{
-        height: 22em;
+        height: 23em;
     }
     @media #{$breakpoint-xl}{
         height: 19em;
     }
     @media #{$breakpoint-xxl}{
-        height: 18em;
+        height: 17em;
     }
 }
 
@@ -501,10 +552,15 @@
     margin: .8em .7em;
     @media #{$breakpoint-md}, #{$breakpoint-lg}, #{$breakpoint-xl}, #{$breakpoint-xxl}{
         margin: 0;
+        font-size: 1em;
         height: 3.5em;
     }
+
     @media #{$breakpoint-xl}{
         font-size: .9em;
+    }
+    @media #{$breakpoint-xxl}{
+        font-size: .85em;
     }
 }
 
@@ -514,7 +570,13 @@
     }
     @media #{$breakpoint-md}, #{$breakpoint-lg}, #{$breakpoint-xl}, #{$breakpoint-xxl}{
         margin: 2em 0 3em 0;
-        grid-template-columns: auto 13em 1em 13em 1em 13em auto;
+        grid-template-columns: auto 13em 2em 13em 2em 13em auto;
+    }
+    @media #{$breakpoint-lg}{
+        grid-template-columns: auto 14em 1.5em 14em 1.5em 14em auto;
+    }
+    @media #{$breakpoint-xxl}{
+        grid-template-columns: auto 13em 2em 13em 2em 13em auto;
     }
 }
 
@@ -524,48 +586,81 @@
 
 .signature-package{
     margin: 4em auto;
-    width: 21em;
     text-align: center;
     @media #{$breakpoint-md}, #{$breakpoint-lg}, #{$breakpoint-xl}, #{$breakpoint-xxl}{
         margin: 2em 0;
         width: 100%;
     }
+    .how-title{
+        @media #{$breakpoint-md}{
+            margin: .8em 0 .8em 0;
+        
+        }
+    }
 }
 
 
 .signature-content{
-    @media #{$breakpoint-md}, #{$breakpoint-lg}, #{$breakpoint-xl}, #{$breakpoint-xxl}{
-        display: grid;
-        grid-template-columns: auto 18em 1em 18em auto;
-        text-align: left;
+    display: grid;
+    text-align: left;
+    width: 80%;
+    margin: auto;
+
+    @media #{$breakpoint-sm}{
+        width: 28em;
+        margin: auto;
+    
+    }
+    @media #{$breakpoint-md}{
+        --gap: 2em;
+        flex-wrap: wrap;
+        margin: calc(-1 * var(--gap)) 0 0 calc(-1 * var(--gap));
+        width: calc(100% + var(--gap));
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+    
+    }
+    @media #{$breakpoint-lg}{
+        width: 100%;
+        grid-template-columns: auto 14em 2em 14em 2em 14em auto;
     }
     @media #{$breakpoint-xl}{
-        grid-template-columns: auto 15em 1em 15em 1em 15em auto;
+        grid-template-columns: auto 15em 2em 15em 2em 15em auto;
     }
 }
 
 .coaching-package-item{
     position: relative;
+    margin: 1.5em 0 0 0;
+    @media #{$breakpoint-sm}{
+        margin: 1.5em 0 0 0;
+    }
     @media #{$breakpoint-md}{
-        height: 18em;
-        &:nth-child(1){
-            grid-column: 2;
-        }
-        &:nth-child(2){
-            grid-column: 4;
+        margin: var(--gap) 0 0 var(--gap);
+        height: 24.5em;
+        width: 18em;
+        &:nth-child(5){
+            margin-top: 4em;
         }
     }
-    @media #{$breakpoint-xl}{
-        height: 14em;
+    @media #{$breakpoint-lg}, #{$breakpoint-xl}{
+        height: 19em;
         &:nth-child(1){
             grid-column: 2;
         }
-        &:nth-child(2){
+        &:nth-child(3){
             grid-column: 4;
         }
-        &:nth-child(3){
+        &:nth-child(5){
             grid-column: 6;
         }
+    }
+    @media #{$breakpoint-lg}{
+        height: 24em;
+    }
+    @media #{$breakpoint-xxl}{
+        height: 17em;
     }
 }
 
