--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1968,11 +1968,17 @@ footer {
   background-color: #fadcd2;
   text-transform: uppercase;
   color: #3b403f;
-  font-size: 1.1em;
-  padding: .6em 1em;
+  font-size: 1.18em;
+  padding: .5em 1em;
   letter-spacing: .2em;
   -webkit-box-shadow: 3px 5px 9px -7px #3b403f;
           box-shadow: 3px 5px 9px -7px #3b403f;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  position: relative;
+  display: inline-block;
+  margin: auto;
 }
 
 @media only screen and (min-width: 500px) and (max-width: 767px) {
@@ -5104,7 +5110,7 @@ input[type='checkbox'] {
 
 @media only screen and (min-width: 1200px) {
   .crazy-about-text {
-    width: 50%;
+    width: 60%;
   }
 }
 
@@ -5546,17 +5552,18 @@ input[type='checkbox'] {
 
 @media only screen and (min-width: 1600px) {
   .services-cta-content {
-    height: 7.5em;
+    height: 5.5em;
   }
 }
 
 .services-cta-btn {
   left: 0;
   right: 0;
-  position: absolute;
+  position: relative;
+  display: inline-block;
   margin: auto;
-  bottom: 1em;
-  width: 220px;
+  bottom: 0;
+  padding: .7em 1.5em;
 }
 
 @media only screen and (min-width: 500px) and (max-width: 767px) {
@@ -5565,21 +5572,9 @@ input[type='checkbox'] {
   }
 }
 
-@media only screen and (min-width: 992px) and (max-width: 1199px) {
-  .services-cta-btn {
-    width: 270px;
-  }
-}
-
-@media only screen and (min-width: 1200px) {
-  .services-cta-btn {
-    width: 270px;
-  }
-}
-
 @media only screen and (min-width: 1600px) {
   .services-cta-btn {
-    width: 310px;
+    padding: .7em 1.5em;
   }
 }
 
@@ -7593,7 +7588,7 @@ input[type='checkbox'] {
     width: 18em;
   }
   .coaching-package-item:nth-child(5) {
-    margin-top: 4em;
+    margin-top: 2em;
   }
 }
 
