--- a/static/css/main.css
+++ b/static/css/main.css
@@ -6930,9 +6930,17 @@ input[type='checkbox'] {
   }
 }
 
+@media only screen and (min-width: 1200px) {
+  .services-hero-img {
+    height: 20em;
+  }
+}
+
 .services-hero-img img {
   width: 100%;
   height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
 }
 
 @media only screen and (min-width: 1600px) {
