--- a/static/scss/pages/_about.scss
+++ b/static/scss/pages/_about.scss
@@ -62,6 +62,8 @@
         }
         @media #{$breakpoint-xl} {
             width: 100%;
+            object-fit: cover;
+            object-position: 50% 15%;
         }
     }
 }
@@ -1111,6 +1113,11 @@
     }
     @media  #{$breakpoint-xxl}{
         height: 15em;
+    }
+    img{
+        height: 100%;
+        width: 100%;
+        object-fit: cover;
     }
 }
 
