--- a/static/scss/pages/_services.scss
+++ b/static/scss/pages/_services.scss
@@ -201,6 +201,7 @@
         width: 100%;
         height: 100%;
         object-fit: cover;
+        object-position: 50% 15%;
         @media #{$breakpoint-xxl}{
             height: 85%;
         }
