--- a/static/css/main.css
+++ b/static/css/main.css
@@ -2660,6 +2660,7 @@ input[type='checkbox'] {
   text-align: center;
   padding: 2em 0;
   background-color: #e4f1f1;
+  z-index: 5;
 }
 
 @media only screen and (min-width: 768px) and (max-width: 991px) {
@@ -3396,6 +3397,14 @@ input[type='checkbox'] {
 
 .quote-parallax-container {
   position: relative;
+  height: 16em;
+}
+
+.quote-parallax-container img {
+  height: 100%;
+  width: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
 }
 
 .quote-parallax-window {
@@ -5498,10 +5507,18 @@ input[type='checkbox'] {
 }
 
 .services-cta img {
-  height: 100%;
+  height: 150%;
   width: 100%;
   -o-object-fit: cover;
-     object-fit: cover;
+  object-fit: cover;
+  -o-object-position: 50% 55%;
+     object-position: 50% 55%;
+  opacity: .5;
+}
+
+.parallax-container {
+  height: 100%;
+  background: black;
 }
 
 .services-parallax-window {
@@ -6167,6 +6184,14 @@ input[type='checkbox'] {
 
 .quote-parallax-container {
   position: relative;
+  height: 16em;
+}
+
+.quote-parallax-container img {
+  height: 100%;
+  width: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
 }
 
 .quote-parallax-window {
