--- a/static/scss/pages/_about.scss
+++ b/static/scss/pages/_about.scss
@@ -1115,10 +1115,18 @@
         height: 15em;
     }
     img{
-        height: 100%;
+        height: 150%;
         width: 100%;
+        -o-object-fit: cover;
         object-fit: cover;
+        object-position: 50% 55%;
+        opacity: .5;
     }
+}
+
+.parallax-container{
+    height: 100%;
+    background: black;
 }
 
 .services-parallax-window{
