--- a/static/scss/pages/_home.scss
+++ b/static/scss/pages/_home.scss
@@ -47,6 +47,9 @@
                 object-fit: cover;
             }
         }
+        .home-hero-2{
+            object-position: 50% 25%;
+        }
 
     }
     @media #{$breakpoint-md}, #{$breakpoint-lg}, #{$breakpoint-xl} {
@@ -166,25 +169,36 @@
     display: grid;
     grid-template-rows: repeat(2, auto); 
     grid-template-columns: 68vw;
-    margin: 5em 0;
+    margin-top: 3em;
+    height: 165em;
     text-align: center;
     justify-content: center;
+    position: relative;
+    background: white;
+    z-index: 5;
 
     @media #{$breakpoint-sm}{
         grid-template-columns: 50vw;
+        height: 135em;
+        padding-bottom: 3em;
     }
     
     @media #{$breakpoint-min-md} {
         grid-template-columns: 2fr [coaching-1-1] minmax(auto, 12em) 2em [coaching-free] minmax(auto, 12em) 2em [coaching-why] minmax(auto, 12em) 2fr; 
-        margin: 3em 0;
+        height: 39em;
+        margin: 0 0 0 0;
     }
-     
+    @media #{$breakpoint-lg}{
+        height: 35em;
+    }
     @media #{$breakpoint-xl} {
         grid-template-columns: auto [coaching-1-1] minmax(auto, 11em) 2em [coaching-free] minmax(auto, 11em) 2em [coaching-why] minmax(auto, 11em) auto;
+        height: 31em;
     }  
     @media #{$breakpoint-xxl} {
         grid-template-columns: auto [coaching-1-1] minmax(auto, 11em) 2em [coaching-free] minmax(auto, 11em) 2em [coaching-why] minmax(auto, 11em) auto;
-        margin: 1em 0 3em 0;
+        margin: 1em 0 0 0;
+        height: 31em;
     } 
 }
 
@@ -192,17 +206,37 @@
     @media #{$breakpoint-min-md} {
         grid-column: coaching-1-1;
     }
+    img{
+        @media #{$breakpoint-lg}, #{$breakpoint-xl} {
+            object-position: 50% 30%;
+        }
+    }
 }
 
 .coaching-free{
     @media #{$breakpoint-min-md} {
         grid-column: coaching-free;
     }
+    img{
+        @media #{$breakpoint-lg}, #{$breakpoint-xl} {
+            object-position: 50% 10%;
+        }
+    }
+    
 }
 .coaching-why{
     @media #{$breakpoint-min-md} {
         grid-column: coaching-why;
     }
+    img{
+        @media #{$breakpoint-xl} {
+            object-position: 50% 45%;
+        }
+        @media #{$breakpoint-xxl} {
+            object-position: 50% 50%;
+        }
+    }
+    
 }
 
 .coaching-1-1,
@@ -213,7 +247,7 @@
     margin: 2em 0;
     height: 100%;
     @media #{$breakpoint-sm}{
-        grid-template-rows: 16em 22em;
+        grid-template-rows: 18em 22em;
     }
     @media #{$breakpoint-md}{
         grid-template-rows: 14em 18.5em;
@@ -240,7 +274,12 @@
         object-fit: cover;
         width: 100%;
         height: 100%;
+        @media #{$breakpoint-sm}{
+            object-position: 50% 25%;
+        }
     }
+
+   
    
 }
 
@@ -288,7 +327,7 @@
     }
     @media #{$breakpoint-min-md} {
         background-color: white;
-        height: 38.5em;
+        height: 36.5em;
         grid-template-columns: 4em 15em repeat(2, 1fr) 4em;
         grid-template-rows:repeat(3, 1fr);
         .home-about-title{
@@ -411,10 +450,12 @@
 
 .quote-parallax-container{
     position: relative;
-    height: 16em;
-
+    height: 19em;
+    @media #{$breakpoint-xl} {
+        height: 14em;
+    }
     img{
-        height: 100%;
+        height: 150%;
         width: 100%;
         object-fit: cover;
     }
