Adjust margins on about

--- a/static/scss/base/_typography.scss
+++ b/static/scss/base/_typography.scss
@@ -34,6 +34,9 @@ $font-la-parisienne: 'la-parisienne', serif;
   font-weight: 700;
 }
 
+.pink-text{
+  color: $pink!important;
+}
 .rob-font{
   font-family: $font-roboto;
   font-weight: 400;
