--- a/static/css/main.css
+++ b/static/css/main.css
@@ -385,6 +385,10 @@ template {
   font-weight: 700;
 }
 
+.pink-text {
+  color: #f58c7c !important;
+}
+
 .rob-font {
   font-family: "Roboto", serif;
   font-weight: 400;
@@ -3999,6 +4003,8 @@ input[type='checkbox'] {
 .about-hero-img {
   text-align: center;
   height: 28em;
+  width: 90vw;
+  margin: auto;
 }
 
 @media only screen and (min-width: 768px) and (max-width: 991px) {
@@ -4006,6 +4012,7 @@ input[type='checkbox'] {
     -ms-grid-column: 2;
     -ms-grid-column-span: 2;
     grid-column: 2/4;
+    width: 100%;
     height: 21em;
   }
 }
@@ -4015,6 +4022,7 @@ input[type='checkbox'] {
     -ms-grid-column: 2;
     -ms-grid-column-span: 2;
     grid-column: 2/4;
+    width: 100%;
     height: 23em;
   }
 }
@@ -4024,6 +4032,7 @@ input[type='checkbox'] {
     -ms-grid-column: 2;
     -ms-grid-column-span: 2;
     grid-column: 2/4;
+    width: 100%;
     height: 21em;
   }
 }
@@ -4038,19 +4047,32 @@ input[type='checkbox'] {
 }
 
 .about-hero-img img {
-  width: 90vw;
+  width: 100%;
   height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
+@media only screen and (min-width: 500px) and (max-width: 767px) {
+  .about-hero-img img {
+    -o-object-position: 50% 20%;
+       object-position: 50% 20%;
+  }
 }
 
 @media only screen and (min-width: 768px) and (max-width: 991px) {
   .about-hero-img img {
     width: 90%;
+    -o-object-position: 50% 20%;
+       object-position: 50% 20%;
   }
 }
 
 @media only screen and (min-width: 992px) and (max-width: 1199px) {
   .about-hero-img img {
     width: 100%;
+    -o-object-position: 50% 20%;
+       object-position: 50% 20%;
   }
 }
 
@@ -4238,7 +4260,6 @@ input[type='checkbox'] {
 }
 
 .about-detail-title {
-  font-size: 1.65em;
   width: 14.4em;
   font-weight: 400;
 }
@@ -4251,7 +4272,6 @@ input[type='checkbox'] {
 
 @media only screen and (min-width: 768px) and (max-width: 991px) {
   .about-detail-title {
-    font-size: 1.2em;
     width: 34em;
   }
 }
@@ -4278,7 +4298,6 @@ input[type='checkbox'] {
 }
 
 .about-detail-subtitle {
-  font-size: 1.35em;
   margin: 0.7em;
 }
 
@@ -4292,7 +4311,6 @@ input[type='checkbox'] {
 @media only screen and (min-width: 768px) and (max-width: 991px) {
   .about-detail-subtitle {
     width: 31em;
-    font-size: 1em;
   }
 }
 
@@ -4561,37 +4579,43 @@ input[type='checkbox'] {
   margin: 4em 0;
 }
 
-.known-for-item .fas {
+.known-for-item .fas,
+.known-for-item .fab {
   font-size: 3.4em;
   margin: auto 0;
 }
 
 @media only screen and (min-width: 500px) and (max-width: 767px) {
-  .known-for-item .fas {
+  .known-for-item .fas,
+  .known-for-item .fab {
     font-size: 3.3em;
   }
 }
 
 @media only screen and (min-width: 768px) and (max-width: 991px) {
-  .known-for-item .fas {
+  .known-for-item .fas,
+  .known-for-item .fab {
     font-size: 2.4em;
   }
 }
 
 @media only screen and (min-width: 992px) and (max-width: 1199px) {
-  .known-for-item .fas {
+  .known-for-item .fas,
+  .known-for-item .fab {
     font-size: 2.3em;
   }
 }
 
 @media only screen and (min-width: 1200px) {
-  .known-for-item .fas {
+  .known-for-item .fas,
+  .known-for-item .fab {
     font-size: 2em;
   }
 }
 
 @media only screen and (min-width: 1600px) {
-  .known-for-item .fas {
+  .known-for-item .fas,
+  .known-for-item .fab {
     font-size: 1.8em;
   }
 }
@@ -5068,11 +5092,22 @@ input[type='checkbox'] {
 
 .crazy-about-sect {
   margin-top: 1em;
+  height: 102em;
+  background: white;
+  z-index: 5;
+  position: relative;
+}
+
+@media only screen and (min-width: 500px) and (max-width: 767px) {
+  .crazy-about-sect {
+    height: 140em;
+  }
 }
 
 @media only screen and (min-width: 768px) {
   .crazy-about-sect {
-    margin: 1em 0 4em 0;
+    margin: 1em 0 0 0;
+    height: 36em;
   }
 }
 
@@ -5140,11 +5175,17 @@ input[type='checkbox'] {
 }
 
 .crazy-about-title {
-  height: 5em;
+  height: 7em;
+}
+
+@media only screen and (min-width: 768px) {
+  .crazy-about-title {
+    height: 4em;
+  }
 }
 
 .crazy-about-title .sect-title {
-  line-height: 3.2;
+  line-height: 2;
   height: auto;
   margin: auto;
 }
@@ -5544,13 +5585,13 @@ input[type='checkbox'] {
 
 @media only screen and (min-width: 768px) and (max-width: 991px) {
   .services-cta {
-    height: 17em;
+    height: 16em;
   }
 }
 
 @media only screen and (min-width: 992px) and (max-width: 1199px) {
   .services-cta {
-    height: 18em;
+    height: 15em;
   }
 }
 
