--- a/static/scss/pages/_about.scss
+++ b/static/scss/pages/_about.scss
@@ -822,6 +822,10 @@
 
 .crazy-about-title{
     height: 7em;
+    margin: 0 4.5em;
+    @media #{$breakpoint-sm} {
+        height: 5em; 
+    }
     @media #{$breakpoint-min-md} {
         height: 4em; 
     }
